# AI-Code-Assistant-with-Gemini-LangChain

./: .env  .gitignore  README.md  app.py  langchain_client.py  main.py  pyproject.toml  requirements.txt
